// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailNotConfirmedAlert /> renders a button to resend confirmation & an alert if user is logged and has not confirmed his email 1`] = `
<Alert
  bsClass="alert"
  bsStyle="warning"
  className="mb-0"
  closeLabel="Close alert"
  id="alert-email-not-confirmed"
>
  <div
    className="container"
  >
    <div
      className="col-md-7"
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <FormattedHTMLMessage
        id="email-address-confirmation-banner-message"
        tagName="span"
        values={
          Object {
            "emailAddress": undefined,
          }
        }
      />
       
      <a
        href="http://aide.cap-collectif.com/article/9-pourquoi-dois-je-confirmer-mon-adresse-electronique"
      >
        <FormattedMessage
          id="cnil.learn"
          values={Object {}}
        />
      </a>
    </div>
    <div
      className="col-md-5"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "marginBottom": 5,
            "marginRight": 15,
          }
        }
      >
        <FormattedMessage
          id="user.confirm.resend"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        href="http://localhost/profile/edit-profile#account"
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <FormattedMessage
          id="user.confirm.update"
          values={Object {}}
        />
      </Button>
    </div>
  </div>
</Alert>
`;

exports[`<EmailNotConfirmedAlert /> renders a disabled button when resending 1`] = `
<Alert
  bsClass="alert"
  bsStyle="warning"
  className="mb-0"
  closeLabel="Close alert"
  id="alert-email-not-confirmed"
>
  <div
    className="container"
  >
    <div
      className="col-md-7"
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <FormattedHTMLMessage
        id="email-address-confirmation-banner-message"
        tagName="span"
        values={
          Object {
            "emailAddress": undefined,
          }
        }
      />
       
      <a
        href="http://aide.cap-collectif.com/article/9-pourquoi-dois-je-confirmer-mon-adresse-electronique"
      >
        <FormattedMessage
          id="cnil.learn"
          values={Object {}}
        />
      </a>
    </div>
    <div
      className="col-md-5"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={true}
        onClick={null}
        style={
          Object {
            "marginBottom": 5,
            "marginRight": 15,
          }
        }
      >
        <FormattedMessage
          id="user.confirm.sending"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        href="http://localhost/profile/edit-profile#account"
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <FormattedMessage
          id="user.confirm.update"
          values={Object {}}
        />
      </Button>
    </div>
  </div>
</Alert>
`;

exports[`<EmailNotConfirmedAlert /> renders a disabled button when resending is done 1`] = `
<Alert
  bsClass="alert"
  bsStyle="warning"
  className="mb-0"
  closeLabel="Close alert"
  id="alert-email-not-confirmed"
>
  <div
    className="container"
  >
    <div
      className="col-md-7"
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <FormattedHTMLMessage
        id="email-address-confirmation-banner-message"
        tagName="span"
        values={
          Object {
            "emailAddress": undefined,
          }
        }
      />
       
      <a
        href="http://aide.cap-collectif.com/article/9-pourquoi-dois-je-confirmer-mon-adresse-electronique"
      >
        <FormattedMessage
          id="cnil.learn"
          values={Object {}}
        />
      </a>
    </div>
    <div
      className="col-md-5"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={true}
        style={
          Object {
            "marginBottom": 5,
            "marginRight": 15,
          }
        }
      >
        <FormattedMessage
          id="user.confirm.sent"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        href="http://localhost/profile/edit-profile#account"
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <FormattedMessage
          id="user.confirm.update"
          values={Object {}}
        />
      </Button>
    </div>
  </div>
</Alert>
`;

exports[`<EmailNotConfirmedAlert /> renders nothing if logged user has confirmed his email 1`] = `""`;

exports[`<EmailNotConfirmedAlert /> renders nothing if not logged 1`] = `""`;
